<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/stringerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:padding="8dp"
            android:text="@string/stringerId"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/stringerId"
            app:layout_constraintTop_toBottomOf="@id/stringerId" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/age"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/stringerId"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/address"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/stringerId"
            app:layout_constraintTop_toBottomOf="@id/age" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/number"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/stringerId"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/start_time"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/stringerId"
            app:layout_constraintTop_toBottomOf="@id/number" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/end_time"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/stringerId"
            app:layout_constraintTop_toBottomOf="@id/startTime" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="8dp"
            android:text="@string/password"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/stringerId"
            app:layout_constraintTop_toBottomOf="@id/endTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
