<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="20dp">

    <TextView
        android:id="@+id/someText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_stringer"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/someTextMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/delete_stringer_msg"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/someText"
        app:layout_constraintTop_toBottomOf="@id/someText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stringerId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/someText"
        app:layout_constraintTop_toBottomOf="@id/someTextMsg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stringerIdEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/stringerId"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/deletePb"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:indeterminateTint="@color/purple_500"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/deleteBtn"
        app:layout_constraintEnd_toEndOf="@id/deleteBtn"
        app:layout_constraintStart_toStartOf="@id/deleteBtn"
        app:layout_constraintTop_toTopOf="@id/deleteBtn" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/stringerId"
        app:layout_constraintTop_toBottomOf="@id/stringerId" />
</androidx.constraintlayout.widget.ConstraintLayout>
