<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddUpdateFragment">

    <TextView
        android:id="@+id/someText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_update_stringer"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/ageTIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/someText"
        tools:text="this is a field of Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameTIL"
        app:layout_constraintTop_toTopOf="@id/nameTIL"
        tools:text="this is a field of Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/nameTIL"
        app:layout_constraintStart_toStartOf="@id/nameTIL"
        app:layout_constraintTop_toBottomOf="@id/phoneTIL"
        tools:text="this is a field of Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/ageTIL"
        app:layout_constraintStart_toEndOf="@id/insertedByTIL"
        app:layout_constraintTop_toBottomOf="@id/nameTIL"
        tools:text="this is a field of Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="number"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/nameTIL"
        app:layout_constraintStart_toStartOf="@id/nameTIL"
        app:layout_constraintTop_toBottomOf="@id/addressTIL"
        tools:text="this is a field of Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startTimeTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/endTimeTIL"
        app:layout_constraintStart_toStartOf="@id/nameTIL"
        app:layout_constraintTop_toBottomOf="@id/passwordTIL"
        tools:text="this is a field of Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/startTimeEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/start_time"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/endTimeTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="@id/ageTIL"
        app:layout_constraintStart_toEndOf="@id/startTimeTIL"
        app:layout_constraintTop_toTopOf="@id/startTimeTIL"
        tools:text="this is a field of Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/endTimeEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_time"
            android:inputType="numberDecimal"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insertedByTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/phoneTIL"
        app:layout_constraintStart_toStartOf="@id/nameTIL"
        app:layout_constraintTop_toBottomOf="@id/nameTIL"
        tools:text="this is a field of Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insertedByEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertedBy"
            android:inputType="number"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/addUpdatePb"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:indeterminateTint="@color/purple_500"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/saveBtn"
        app:layout_constraintEnd_toEndOf="@id/saveBtn"
        app:layout_constraintStart_toStartOf="@id/saveBtn"
        app:layout_constraintTop_toTopOf="@id/saveBtn" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="18dp"
        android:text="@string/save"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/ageTIL"
        app:layout_constraintStart_toStartOf="@id/nameTIL"
        app:layout_constraintTop_toBottomOf="@id/endTimeTIL" />
</androidx.constraintlayout.widget.ConstraintLayout>
